objects/ccrz__E_CartItem__c.object
<CustomObject>
    <description>Cart Items</description>
    <fields>
        <fullName>cc_oo_ContractPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC OO ContractPrice</label>
        <referenceTo>cc_oo_ContractPrice__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_DiscountDelta__c</fullName>
        <label>DiscountDelta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_IsListPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cc_oo_IsListPrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_oo_JDELineNumber__c</fullName>
        <label>JDELineNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_LineNumberId__c</fullName>
        <label>Line Number Id</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_OriginalBagPrice__c</fullName>
        <label>Original Bag Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_OriginalCartItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Cart Item</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>CC Cart Items (Original Cart Item)</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_OriginalPalletPrice__c</fullName>
        <label>Original Pallet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_TotalWieght__c</fullName>
        <formula>ccrz__Product__r.ccrz__ProductWeight__c * ccrz__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>cc_oo_TotalWieght</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_isFreightIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFreightIncluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_oo_leadtime__c</fullName>
        <label>lead time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_webLineNumber__c</fullName>
        <description>web auto number upto 6 digit for JDE to track line number</description>
        <displayFormat>{000000}</displayFormat>
        <label>web Line Number__c</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ccrz__AbsoluteDiscount__c</fullName>
        <description>The absolute discount for this item in the cart</description>
        <label>Absolute Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentAmount__c</fullName>
        <description>Additional Adjustment from the CSR</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessage__c</fullName>
        <label>Availability Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CartItemId__c</fullName>
        <externalId>true</externalId>
        <label>Cart Item Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Cart__c</fullName>
        <description>Cart Id</description>
        <label>Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CategoryID</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Coupon ID</description>
        <label>Coupon</label>
        <referenceTo>ccrz__E_Coupon__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItem2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product used to display the name in the cart and link to product detail page</description>
        <label>Display Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Cart Items (Display Product)</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if a subscription was selected via the UI, or if the associated product is only a subscription.  False otherwise.</description>
        <inlineHelpText>True if a subscription was selected via the UI, or if the associated product is only a subscription.  False otherwise.</inlineHelpText>
        <label>Is Subscription Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemLabel__c</fullName>
        <description>Alternate label to use when displaying the item in the cart.</description>
        <label>Item Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemStatus__c</fullName>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Pre-Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ItemTotal__c</fullName>
        <formula>ccrz__AdjustmentAmount__c  +  ccrz__SubAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalQuantity__c</fullName>
        <description>The purpose of this field is to store the appropriate quantity of line items that have  products in the  form of parent and child like bundles kits and dynamic kits</description>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentCartItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Cart Item</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product Id</description>
        <label>Parent Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Cart Items (ParentProductID)</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PercentDiscount__c</fullName>
        <description>The percentage discount for this item in the cart</description>
        <label>Percent Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccrz__Price__c</fullName>
        <description>Price</description>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductType__c</fullName>
        <description>ProductType same as CartItemType</description>
        <label>ProductType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product ID</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Cart Items (ProductID)</relationshipLabel>
        <relationshipName>E_CartItem2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPriceSubAmt__c</fullName>
        <description>Sub total for the recurring price</description>
        <label>Recurring Price Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPrice__c</fullName>
        <description>The recurring price portion of a subscription</description>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RequestDate__c</fullName>
        <description>Request Date</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Seller this Cart Item is to be purchased from.</description>
        <label>Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__StoreID__c</fullName>
        <label>Store ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubAmount__c</fullName>
        <description>Sub Amount</description>
        <label>Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__SubProdTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubProdTerm</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Duration__c</fullName>
        <description>Duration of the subscription in months.  If this is field is blank, then this cart item is not a subscribed item.</description>
        <inlineHelpText>Duration of the subscription in months.  If this is field is blank, then this cart item is not a subscribed item.</inlineHelpText>
        <label>Subscription Duration (In Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Frequency__c</fullName>
        <description>The frequency of this subscription in days.  If not selected via the UI, then this value defaults to the Product&apos;s subscription frequency.</description>
        <inlineHelpText>The frequency of this subscription in days.  If not selected via the UI, then this value defaults to the Product&apos;s subscription frequency.</inlineHelpText>
        <label>Subscription Frequency</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__cartItemType__c</fullName>
        <label>cart item type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                    <default>true</default>
                    <label>Major</label>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Cart Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CartItemAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>